apps/pgadmin/deployment-default-pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: database-admin
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/name: pgadmin
  name: pgadmin
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: pgadmin
      app.kubernetes.io/name: pgadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: database-admin
        app.kubernetes.io/instance: pgadmin
        app.kubernetes.io/name: pgadmin
        app.kubernetes.io/version: "9.15"
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: PGADMIN_LISTEN_ADDRESS
          value: "0.0.0.0"
        - name: PGADMIN_LISTEN_PORT
          value: "5050"
        - name: PGADMIN_DISABLE_POSTFIX
          value: "true"
        - name: GUNICORN_THREADS
          value: "4"
        - name: CONFIG_DATABASE_URI
          valueFrom:
            secretKeyRef:
              key: CONFIG_DATABASE_URI
              name: pgadmin-secrets
              optional: false
        - name: OAUTH2_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: OAUTH2_CLIENT_SECRET
              name: pgadmin-secrets
              optional: false
        - name: PGADMIN_DEFAULT_EMAIL
          valueFrom:
            secretKeyRef:
              key: PGADMIN_DEFAULT_EMAIL
              name: pgadmin-secrets
              optional: false
        - name: PGADMIN_DEFAULT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: PGADMIN_DEFAULT_PASSWORD
              name: pgadmin-secrets
              optional: false
        image: dpage/pgadmin4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: Host
              value: pgadmin.brmartin.co.uk
            path: /misc/ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: pgadmin
        ports:
        - containerPort: 5050
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: Host
              value: pgadmin.brmartin.co.uk
            path: /misc/ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 768Mi
          requests:
            cpu: 50m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 5050
        startupProbe:
          failureThreshold: 18
          httpGet:
            httpHeaders:
            - name: Host
              value: pgadmin.brmartin.co.uk
            path: /misc/ping
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /pgadmin4/config_local.py
          mountPropagation: None
          name: config
          readOnly: true
          subPath: config_local.py
        - mountPath: /var/lib/pgadmin
          mountPropagation: None
          name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 5050
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        runAsUser: 5050
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: pgadmin-config
          optional: false
        name: config
      - emptyDir: {}
        name: data
